# mobile_robotics_HW

./: README.md
homework-01/: task2.py  task2c_python.ipynb
homework-02/: hw2_task4_A.py  hw2_task4_B.py  hw2_task5_D.py  hw_task4_C.py
homework-02/hw2-code/: task4_python.ipynb  task5_python.ipynb
homework-03/: hw3_EKF.py  hw3_EKF_multiple.py
homework-04/data.csv/: a.csv  dt.csv  euler_gt.csv  gravity.csv  omega.csv
homework-05/HW5_codes_python/HW5_codes_python/comm/: path_publisher.py
homework-05/HW5_codes_python/HW5_codes_python/config/: settings.yaml
homework-05/HW5_codes_python/HW5_codes_python/data/: generate_data.py
homework-05/HW5_codes_python/HW5_codes_python/filter/: EKF.py  PF.py  UKF.py
homework-05/HW5_codes_python/HW5_codes_python/rviz/: default.rviz
homework-05/HW5_codes_python/HW5_codes_python/utils/: DataHandler.py  filter_initialization.py  system_initialization.py
homework-06/HW6_code_python/HW6_code_python/: ogm_CSM.py  ogm_S_CSM.py  ogm_continous_S_CSM.py  ogm_continuous_CSM.py  run.py
homework-07/: CMakeLists.txt  datasets
homework-07/include/: batch_optimization_for_2D_graph_B.hpp  data_parse.hpp  edge.hpp  incremental_optimization_for_2D_graph_C.hpp  main.hpp  read_input_intel_g2o.hpp  utilities.hpp  vertex.hpp
homework-07/src/: CMakeLists.txt  batch_optimization_for_2D_graph_B.cc  data_parse.cc  edge.cc  incremental_optimization_for_2D_graph_C.cc  main.cc  read_input_intel_g2o.cc  utilities.cc  vertex.cc
